# libpermute

./: CHANGES.md  Cargo.toml  README.md
src/: lib.rs  permute.rs  tests.rs  usize_generator.rs
