[package]
name = "libpermute"
version = "1.0.1"
edition = "2018"
authors = ["Palmer Cox <p@lmercox.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/DaGenix/libpermute"
documentation = "https://docs.rs/libpermute"
homepage = "https://github.com/DaGenix/libpermute"
description = """
A `no_std` compatible library that provides a function
to permute the items of a slice.
"""
categories = ["algorithms"]

[dependencies]
chacha20 = {version = "0.7.2", default-features = false, features = ["cipher"]}
sha2 = {version = "0.9.5", default-features = false}
static_assertions = "1.1.0"

[features]
default = ["std"]
std = ["sha2/std", "chacha20/std"]
